force-app/main/default/objects/Provider_Checklist__c/Provider_Checklist__c.object-meta.xml
<CustomObject>
    <label>Provider Checklist</label>
    <nameField>
        <label>Provider Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>