force-app/main/default/objects/Provider_Checklist__c/fields/Acupuncture__c.field-meta.xml
<CustomField>
    <fullName>Acupuncture__c</fullName>
    <label>Acupuncture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Continue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>