force-app/main/default/objects/Provider_Checklist__c/fields/Additional_DME_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_DME_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional DME</label>
    <referenceTo>DME__c</referenceTo>
    <relationshipLabel>Provider Checklists (Additional DME)</relationshipLabel>
    <relationshipName>Provider_Checklists2</relationshipName>
    <type>Lookup</type>
</CustomField>