force-app/main/default/objects/Provider_Checklist__c/fields/Additional_Imaging__c.field-meta.xml
<CustomField>
    <fullName>Additional_Imaging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Imaging</label>
    <referenceTo>Imaging__c</referenceTo>
    <relationshipLabel>Provider Checklists (Additional Imaging)</relationshipLabel>
    <relationshipName>Provider_Checklists1</relationshipName>
    <type>Lookup</type>
</CustomField>