force-app/main/default/objects/Provider_Checklist__c/fields/Additional_Specialist2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Specialist2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Specialist</label>
    <referenceTo>CareCloud_Information__c</referenceTo>
    <relationshipLabel>Provider Checklists Where Referred (Additional Specialist 2)</relationshipLabel>
    <relationshipName>Provider_Checklists3</relationshipName>
    <type>Lookup</type>
</CustomField>