force-app/main/default/objects/Provider_Checklist__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Provider Checklist</relationshipLabel>
    <relationshipName>Provider_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>