force-app/main/default/objects/Provider_Checklist__c/fields/Body_Part_MRI__c.field-meta.xml
<CustomField>
    <fullName>Body_Part_MRI__c</fullName>
    <label>Body Part</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Body_Parts</valueSetName>
    </valueSet>
</CustomField>