force-app/main/default/objects/Provider_Checklist__c/fields/Conservative_Care_Status__c.field-meta.xml
<CustomField>
    <fullName>Conservative_Care_Status__c</fullName>
    <label>Conservative Care Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provider_Checklist_Item_Status</valueSetName>
    </valueSet>
</CustomField>