force-app/main/default/objects/Provider_Checklist__c/fields/Details_for_Conservative_Care__c.field-meta.xml
<CustomField>
    <fullName>Details_for_Conservative_Care__c</fullName>
    <label>Details for Conservative Care</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>