force-app/main/default/objects/Provider_Checklist__c/fields/Details_for_Other_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Details_for_Other_Specialist__c</fullName>
    <label>Details for Other Specialist</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>