force-app/main/default/objects/Provider_Checklist__c/fields/DME__c.field-meta.xml
<CustomField>
    <fullName>DME__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DME</label>
    <referenceTo>DME__c</referenceTo>
    <relationshipLabel>Provider Checklists Where Ordered</relationshipLabel>
    <relationshipName>Provider_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>