force-app/main/default/objects/Provider_Checklist__c/fields/DME_Details__c.field-meta.xml
<CustomField>
    <fullName>DME_Details__c</fullName>
    <label>DME Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>