force-app/main/default/objects/Provider_Checklist__c/fields/FA_Required__c.field-meta.xml
<CustomField>
    <fullName>FA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FA Required</label>
    <type>Checkbox</type>
</CustomField>