force-app/main/default/objects/Provider_Checklist__c/fields/Follow_Up_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Appointment__c</fullName>
    <label>Follow Up Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Follow_Up</valueSetName>
    </valueSet>
</CustomField>