force-app/main/default/objects/Provider_Checklist__c/fields/Follow_Up_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Appointment_Status__c</fullName>
    <label>Follow Up Appointment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provider_Checklist_Item_Status</valueSetName>
    </valueSet>
</CustomField>