force-app/main/default/objects/Provider_Checklist__c/fields/Helpful_Details_for_Next_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Helpful_Details_for_Next_Appointment__c</fullName>
    <label>Helpful Details for Next Appointment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>