force-app/main/default/objects/Provider_Checklist__c/fields/Imaging__c.field-meta.xml
<CustomField>
    <fullName>Imaging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imaging</label>
    <referenceTo>Imaging__c</referenceTo>
    <relationshipLabel>Provider Checklists Where Ordered</relationshipLabel>
    <relationshipName>Provider_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>