force-app/main/default/objects/Provider_Checklist__c/fields/Imaging_Details__c.field-meta.xml
<CustomField>
    <fullName>Imaging_Details__c</fullName>
    <label>Imaging Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>