force-app/main/default/objects/Provider_Checklist__c/fields/Initial_Vein_Screen__c.field-meta.xml
<CustomField>
    <fullName>Initial_Vein_Screen__c</fullName>
    <label>Initial Vein Screen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Performed</fullName>
            </value>
            <value>
                <fullName>To Be Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>