force-app/main/default/objects/Provider_Checklist__c/fields/Medical_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Medical_Clearance__c</fullName>
    <label>Medical Clearance</label>
    <type>TextArea</type>
</CustomField>