force-app/main/default/objects/Provider_Checklist__c/fields/Medication__c.field-meta.xml
<CustomField>
    <fullName>Medication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medication</label>
    <referenceTo>Medication__c</referenceTo>
    <relationshipLabel>Provider Checklists</relationshipLabel>
    <relationshipName>Provider_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>