force-app/main/default/objects/Provider_Checklist__c/fields/Medication_Details__c.field-meta.xml
<CustomField>
    <fullName>Medication_Details__c</fullName>
    <label>Medication Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>