force-app/main/default/objects/Provider_Checklist__c/fields/Ordered_Xray__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Xray__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ordered</label>
    <type>Checkbox</type>
</CustomField>