force-app/main/default/objects/Provider_Checklist__c/fields/Other_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Other_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Specialist</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CareCloud_Information__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CareCloud_Information__c</referenceTo>
    <relationshipLabel>Provider Checklists Where Referred</relationshipLabel>
    <relationshipName>Provider_Checklists1</relationshipName>
    <type>Lookup</type>
</CustomField>