force-app/main/default/objects/Provider_Checklist__c/fields/Physical_Therapy__c.field-meta.xml
<CustomField>
    <fullName>Physical_Therapy__c</fullName>
    <label>Physical Therapy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Start_Continue</valueSetName>
    </valueSet>
</CustomField>