force-app/main/default/objects/Provider_Checklist__c/fields/PPT__c.field-meta.xml
<CustomField>
    <fullName>PPT__c</fullName>
    <label>PPT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upper</fullName>
            </value>
            <value>
                <fullName>Lower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>