force-app/main/default/objects/Provider_Checklist__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedure</label>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Provider Checklists Where Ordered</relationshipLabel>
    <relationshipName>Provider_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>