force-app/main/default/objects/Provider_Checklist__c/fields/Procedure_Details__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Details__c</fullName>
    <label>Procedure Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>