force-app/main/default/objects/Provider_Checklist__c/fields/Side_of_Body_MRI__c.field-meta.xml
<CustomField>
    <fullName>Side_of_Body_MRI__c</fullName>
    <label>Side of Body</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Left_Right_Bilateral</valueSetName>
    </valueSet>
</CustomField>