force-app/main/default/objects/Provider_Checklist__c/fields/Taken_In_Office_Xray__c.field-meta.xml
<CustomField>
    <fullName>Taken_In_Office_Xray__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taken In Office</label>
    <type>Checkbox</type>
</CustomField>