force-app/main/default/objects/Provider_Checklist__c/fields/Vein_Indications__c.field-meta.xml
<CustomField>
    <fullName>Vein_Indications__c</fullName>
    <label>Vein Indications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>