force-app/main/default/objects/Provider_Checklist__c/fields/Vein_Scan_Performed__c.field-meta.xml
<CustomField>
    <fullName>Vein_Scan_Performed__c</fullName>
    <label>Vein Scan Performed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post-Op</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Doppler - Accessory</fullName>
            </value>
            <value>
                <fullName>Doppler - Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>