force-app/main/default/objects/Provider_Checklist__c/listViews/In_Process.listView-meta.xml
<ListView>
    <fullName>In_Process</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Follow_Up_Appointment_Status__c</columns>
    <columns>DME_Status__c</columns>
    <columns>Imaging_Status__c</columns>
    <columns>Procedure_Status__c</columns>
    <columns>Other_Specialist_Status__c</columns>
    <columns>Conservative_Care_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Process</value>
    </filters>
    <label>In Process</label>
</ListView>