force-app/main/default/objects/Provider_Checklist__c/listViews/Sim_In_Process.listView-meta.xml
<ListView>
    <fullName>Sim_In_Process</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Follow_Up_Appointment_Status__c</columns>
    <columns>DME_Status__c</columns>
    <columns>Imaging_Status__c</columns>
    <columns>Procedure_Status__c</columns>
    <columns>Other_Specialist_Status__c</columns>
    <columns>Conservative_Care_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Process</value>
    </filters>
    <filters>
        <field>Provider__c</field>
        <operation>contains</operation>
        <value>Sim</value>
    </filters>
    <label>Sim - In Process</label>
    <sharedTo>
        <role>Extender</role>
    </sharedTo>
</ListView>